# twelvedata-python

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE.txt  Pipfile  README.md  ci.yml Jerry Robertson  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: Makefile  conf.py  index.rst
src/twelvedata/: __init__.py  client.py  context.py  endpoints.py  exceptions.py  http_client.py  mixins.py  renders.py  time_series.py  utils.py  websocket.py
tests/: test_client.py
